--- a/semana19/aula-59/package.json
+++ b/semana19/aula-59/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "arquitetura-template",
+  "name": "exercicios-aula-59",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts",
-    "start:dev": "ts-node-dev index.ts",
-    "build": "tsc index.ts",
-    "build:run": "tsc index.ts && node index.js"
+    "start": "ts-node-dev ./src/index.ts",
+    "build": "tsc"
   },
   "keywords": [
     "mvc"
   ],
-  "author": "labenu",
+  "author": "Marana Caon",
   "license": "ISC",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
