--- a/semana20/aula-63/package.json
+++ b/semana20/aula-63/package.json
@@ -12,11 +12,15 @@
     "@types/jest": "^25.2.3",
     "@types/knex": "^0.16.1",
     "@types/node": "^14.0.6",
-    "dotenv": "^8.2.0",
     "jest": "^26.0.1",
     "knex": "^0.21.6",
+    "mysql": "^2.18.1",
     "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^8.2.0"
   }
 }
